# maelys

./: README.md  docker-compose.yml  norm_maelys.drawio.xml  parse_data_types.ipynb  pyproject.toml
maelys/: README.md  dbt_project.yml  example.profile.yml  parse_data_types.ipynb
maelys/models/: marketplace.sql  refund_retrocharge.sql  schema.yml
maelys/models/core/: adjustment.sql  chargeback_refund.sql  fba_inventory_fee.sql  order.sql  order_retrocharge.sql  refund.sql  refund_retrocharge.sql  schema.yml  service_fee.sql  transfer.sql
maelys/models/stage/: city.sql  marketplace.sql  payment_total.sql  schema.yml  single_pay.sql  sku.sql  transaction_meta.sql  transactions.sql
maelys/seeds/: properties.yml
maelys/tests/: test_incr.md  test_incr.sql
