[tool.poetry]
name = "maelys"
version = "0.1.0"
description = ""
authors = ["Maxim Urzhumtsev <urzhumtsev.max@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-postgres = "^1.2.2"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
